--- a/Assignments/Assignment 3/src/main/resources/application.properties
+++ b/Assignments/Assignment 3/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-server.port=8081
-spring.jpa.hibernate.ddl-auto = update
-spring.datasource.url = jdbc:mysql://localhost:3306/hospital
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/hospital
 spring.datasource.username=root
 spring.datasource.password=root
+server.port=9080
