--- a/Assignments/Assignment 3/build.gradle
+++ b/Assignments/Assignment 3/build.gradle
@@ -26,44 +26,23 @@ repositories {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    //compile('org.springframework.boot:spring-boot-starter-security')
+    compile('org.springframework.boot:spring-boot-starter-security')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-websocket')
     runtime('mysql:mysql-connector-java')
     testCompile('org.springframework.boot:spring-boot-starter-test')
-    //testCompile('org.springframework.security:spring-security-test')
-
-    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.0.1.RELEASE'
-
-    //added to be similar with previous assignment
     compile("org.springframework.boot:spring-boot-devtools")
     compile('org.springframework.boot:spring-boot-starter-integration')
-    // https://mvnrepository.com/artifact/org.springframework/spring-test
     testCompile group: 'org.springframework', name: 'spring-test', version: '4.3.2.RELEASE'
-
-    // https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
-    // https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path
-    //compile group: 'com.jayway.jsonpath', name: 'json-path', version: '2.2.0'
-    // https://mvnrepository.com/artifact/org.mockito/mockito-core
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
-    // https://mvnrepository.com/artifact/org.json/json
     compile group: 'org.json', name: 'json', version: '20171018'
-    // https://mvnrepository.com/artifact/org.webjars/jquery
     compile group: 'org.webjars', name: 'jquery', version: '2.1.3'
-
-
-    // https://mvnrepository.com/artifact/org.webjars/webjars-locator
     compile group: 'org.webjars', name: 'webjars-locator', version: '0.32'
-    // https://mvnrepository.com/artifact/org.webjars/sockjs-client
     compile group: 'org.webjars', name: 'sockjs-client', version: '1.0.2'
-    // https://mvnrepository.com/artifact/org.webjars/stomp-websocket
     compile group: 'org.webjars', name: 'stomp-websocket', version: '2.3.3'
-    // https://mvnrepository.com/artifact/org.webjars/bootstrap
     compile group: 'org.webjars', name: 'bootstrap', version: '3.3.7'
-
-    // https://mvnrepository.com/artifact/org.webjars/jquery
     compile group: 'org.webjars', name: 'jquery', version: '3.1.0'
 
 
